--- a/.eslintrc
+++ b/.eslintrc
@@ -70,6 +70,9 @@
     "react/forbid-prop-types": 0,
     "react/no-unescaped-entities": 0,
     "jsx-a11y/accessible-emoji": 0,
+    "no-plusplus": ["error", {
+      "allowForLoopAfterthoughts": true
+    }],
     "react/require-default-props": 0,
     "react/jsx-filename-extension": [
       1,
